--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.7",
+    "agents": "^0.2.31",
     "hono": "^4.10.8"
   },
   "devDependencies": {
