--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,5 +8,28 @@
   ],
   "ai": {
     "binding": "AI"
-  }
+  },
+  "durable_objects": {
+    "bindings": [
+      {
+        "name": "MEDIATOR",
+        "class_name": "MediatorAgent",
+        "script_name": "harpoon-v2"
+      },
+      {
+        "name": "ORCHESTRATOR",
+        "class_name": "OrchestratorAgent",
+        "script_name": "harpoon-v2"
+      }
+    ]
+  },
+  "migrations": [
+    {
+      "tag": "v1",
+      "new_sqlite_classes": [
+        "MediatorAgent",
+        "OrchestratorAgent"
+      ]
+    }
+  ]
 }
