--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "dev:sandbox": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
-    "build": "vite build",
+    "build": "vite build && npm run copy-static",
+    "copy-static": "mkdir -p dist/static && cp public/styles.css dist/static/ && cp public/app.js dist/static/",
     "preview": "wrangler pages dev dist",
-    "deploy": "npm run build && wrangler pages deploy dist --project-name harpoon-v2",
+    "deploy": "npm run build && wrangler pages deploy dist --project-name harpoon-v2 --commit-dirty=true",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "clean-port": "fuser -k 3000/tcp 2>/dev/null || true",
     "test": "curl http://localhost:3000/api/health"
