Phase 4 Preparation: Updated roadmap and Durable Objects setup
✅ Created comprehensive UPDATED_ROADMAP.md
✅ Added Durable Objects bindings to wrangler.jsonc
✅ Created src/agents/ directory structure
✅ Ready for Phase 4 implementation

Roadmap includes:
- Phase 1-3 completion summary
- Phase 4: Real-time agent communication (next)
- Phase 5: Advanced features (planned)
- Phase 6: Enterprise features (future)

Technical setup:
- DO bindings: MEDIATOR, ORCHESTRATOR
- Agent directory: src/agents/
- WebSocket endpoints planned
- SQLite schema designed

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,5 +5,19 @@
   "pages_build_output_dir": "./dist",
   "compatibility_flags": [
     "nodejs_compat"
-  ]
+  ],
+  "durable_objects": {
+    "bindings": [
+      {
+        "name": "MEDIATOR",
+        "class_name": "MediatorAgent",
+        "script_name": "harpoon-v2"
+      },
+      {
+        "name": "ORCHESTRATOR",
+        "class_name": "OrchestratorAgent",
+        "script_name": "harpoon-v2"
+      }
+    ]
+  }
 }
